--- a/Front End Code/university website/manifest.json
+++ b/Front End Code/university website/manifest.json
@@ -1,1 +1,19 @@
-{"name":"Capital University","short_name":"Capital University","icons":[{"src":"/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}],"theme_color":"#1b2328","background_color":"#1b2328","display":"standalone"}
+{
+    "name": "Capital University",
+    "short_name": "Capital University",
+    "icons": [
+        {
+            "src": "/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "theme_color": "#1b2328",
+    "background_color": "#1b2328",
+    "display": "standalone"
+}
